--- a/views/menu/checkout.ejs
+++ b/views/menu/checkout.ejs
@@ -57,7 +57,7 @@
                             <span>$<%= food.price.toFixed(2) %></span>
                         </div>
                         <div class="checkout-item checkout-item-remove">
-                            <a href="/checkout/cart-remove/<%= food.item._id %>" style="text-decoration: none;">Remove</span></a>
+                            <a href="/checkout/cart-remove/<%= food.item._id %>" style="text-decoration: none; font-size: 15px;"><strong>Remove</strong></span></a>
                         </div>
                     </div>
                     <% }); %>
