--- a/public/stylesheets/order.css
+++ b/public/stylesheets/order.css
@@ -8,7 +8,7 @@
     height: 75px;
     padding: 12px;
     border-bottom: 1px solid #eeeeee;
-    background: pink;
+    background: #F2F2F2;
 }
 
 .customer-info{
