--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,38 @@
-<% include ./partials/header %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>FoodDeliverEat</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/stylesheets/landing.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
+    </head>
+    <body>
 
-<h1>Landing Page</h1>
+    <div class="container">
+        <% if(error && error.length > 0){ %>
+            <div class="alert alert-danger" role="alert">
+                <%= error %>
+            </div>
+        <% } %>
+        <% if(success && success.length > 0){ %>
+            <div class="alert alert-success" role="alert">
+                <%= success %>
+            </div>
+        <% } %>
+    </div>
 
-<a href="/menu" class="btn btn-lg btn-success">Order Now</a>
+    <div id="landing-header">
+ 		<h1>Welcome to FoodDeliverEat</h1>
+		<a href="/menu" class="btn btn-lg btn-primary outline">Order Now</a>
+    </div>
+
+    <ul class="slideshow">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+
 
 <% include ./partials/footer %>
