--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
                       <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="/">FoodDeliverEat</a>
+                    <a class="navbar-brand" href="/menu">FoodDeliverEat</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
