--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -58,13 +58,13 @@
         <div id="content">
         <div class="container">
         <% if(success && success.length > 0){ %>
-            <div class="alert alert-success" role="alert">
-                <%= success %>
-            </div>
+                <div class="alert alert-success" role="alert" style="z-index: 100; position: fixed;">
+                    <%= success %>
+                </div>
         <% } %>
 
         <% if(error && error.length > 0){ %>
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-danger" role="alert" style="z-index: 100; position: fixed;">
                 <%= error %>
             </div>
         <% } %>
