--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -36,7 +36,7 @@
 .checkout-row{
     margin: 10px;
     height: 55px;
-    border-bottom: 1px solid #eeeeee;
+    border-bottom: 1px solid #dddddd;
 }
 
 .checkout-item{
@@ -83,4 +83,8 @@
 .checkout-price{
     text-align: right;
     float: right;
+}
+
+hr{
+    border-color: #dddddd;
 }
