--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,5 +1,9 @@
 <% include ../partials/header %>
 
 <h1>Profile</h1>
+<p><%= user.username %></p>
+<% for(var i = 0; i < user.orders.length; i++){ %>
+    <p>Hello</p>
+<% } %>
 
 <% include ../partials/footer %>
