--- a/public/stylesheets/order.css
+++ b/public/stylesheets/order.css
@@ -59,3 +59,8 @@
 .order-total-container p{
     margin: 0;
 }
+
+.order-delivery-instructions{
+    border-top: 1px solid #dddddd;
+    padding-top: 10px;
+}
