Added nav pills and user profile styling

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="/stylesheets/menu.css">
         <link rel="stylesheet" href="/stylesheets/checkout.css">
         <link rel="stylesheet" href="/stylesheets/order.css">
+        <link rel="stylesheet" href="/stylesheets/profile.css">
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
