--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,5 +1,15 @@
 <% include ../partials/header %>
 
+<div class="row">
+    <div class="col-md-2 col-md-offset-2" >
+        <ul class="nav nav-pills nav-stacked">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">My Account</a></li>
+            <li><a href="#">Payment Options</a></li>
+            <li><a href="#">Order History</a></li>
+        </ul>
+    </div>
+
 <% if(user.orders[0] != null){ %>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -78,10 +88,9 @@
         </div>
     </div>
 <% } else { %>
-    <div class="row">
-        <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-            <h2>You have not placed any orders</h2>
-        </div>
+    <div class="col-sm-6 col-md-6 col-md-offset-1 col-sm-offset-3" style="display: inline-block; float: left">
+        <h2>You have not placed any orders</h2>
     </div>
 <% } %>
+</div>
 <% include ../partials/footer %>
