--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <div class="row">
-    <div class="col-md-2 col-md-offset-2" >
+    <div class="col-md-3 col-md-offset-2">
         <ul class="nav nav-pills nav-stacked">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">My Account</a></li>
@@ -88,7 +88,7 @@
         </div>
     </div>
 <% } else { %>
-    <div class="col-sm-6 col-md-6 col-md-offset-1 col-sm-offset-3" style="display: inline-block; float: left">
+    <div class="col-sm-6 col-md-6" style="display: inline-block; float: left">
         <h2>You have not placed any orders</h2>
     </div>
 <% } %>
