Refactored date format, created profile routes and linked to pills

--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -22,7 +22,7 @@
                             <p><strong>Order Number</strong></p>
                         </div>
                         <div class="customer-info col-md-3">
-                            <p><%= moment(order.deliveryTime).format("LLLL") %></p>
+                            <p><%= moment(order.deliveryTime).format("ddd LLL") %></p>
                         </div>
                         <div class="customer-info col-md-2">
                             <p><%= order.name %></p>
