--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,13 +1,4 @@
-<% include ../partials/header %>
-    <div class="row">
-        <div class="col-md-3 col-md-offset-2">
-            <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="/user/<%= currentUser._id %>/account">My Account</a></li>
-                <li><a href="/user/<%= currentUser._id %>/payment-info">Payment Options</a></li>
-                <li><a href="/user/<%= currentUser._id %>/order-history">Order History</a></li>
-            </ul>
-        </div>
+<% include ../partials/profile-header %> <!-- Row set up in profile-header -->
 
 
         <% if(user.orders[0] != null){ %>
@@ -93,4 +84,4 @@
             </div>
         <% } %>
     </div>
-<% include ../partials/footer %>
+<% include ../partials/profile-footer %>
