Added slideDown and slideUp animation on dropdown

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,7 +22,7 @@
     </div>
 
     <div id="landing-header">
- 		<h1>Welcome to FoodDeliverEat</h1>
+ 		<h1>Welcome to LocEATS</h1>
 		<a href="/menu" class="btn btn-lg btn-primary outline">Order Now</a>
     </div>
 
@@ -36,8 +36,3 @@
 
 
 <% include ./partials/footer %>
-
-
-
-//Paralax scrolling
-//Animate dropdown
