--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -1,8 +1,7 @@
 <% include ../partials/header %>
 
 <div class="">
-    <div class="">
-        <img class="center-block d-flex" style="height:300px; width:100%; object-fit: cover;" src="https://static1.squarespace.com/static/53f144b0e4b0bfa013c298ad/545c2a5ee4b0ba3d01d7612a/59ee70490abd0407c4768739/1508798545034/Acitron-Cocina-High+Res.JPG?format=1500w" alt="">
+    <div class="parallax-header">
     </div>
     <div class="menu-container">
         <div class="">
