--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -7,7 +7,17 @@
                 <div class="col-md-9 order-history-item-container">
                 <% user.orders.forEach(function(order){ %>
                         <div class="order-history-item">
-                            <h4>Hello</h4>
+                            <div class="" style="width: 25%; display: inline-block;">
+                                <div class="" style="display: block;">
+                                    <%= order.name %>
+                                </div>
+                                <div class="" style="display: block; text-transform: capitalize;">
+                                    $<%= (order.cart.totalPrice * 1.05).toFixed(2) %> | <%= order.payment %>
+                                </div>
+                            </div>
+                            <div class="" style="width: 25%; display: inline-block; float: right; background: pink;">
+                                
+                            </div>
                         </div>
                 <% }); %>
                 </div>
