--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -45,9 +45,46 @@
     float: left;
     border-bottom: 1px solid #cccccc;
     width: 100%;
-<<<<<<< HEAD
-    padding: 0 10px;
-=======
+    height: 65px;
     padding: 7px;
->>>>>>> c538e7035832d5bf67208ca7dc672b3950406c89
+    position: relative;
+}
+
+.order-history-item-left{
+     width: 25%;
+     display: inline-block;
+}
+
+.order-history-name{
+    display: block;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.order-histroy-payment{
+    display: block;
+    text-transform: capitalize;
+    font-size: 15px;
+    color: #666666;
+}
+
+.order-history-button{
+    display: inline-block;
+    float: right;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.order-history-button .btn{
+    font-weight: 500;
+    font-size: 15px;
+    padding: 10px;"
+}
+
+.order-history-item-right{
+    display: inline-block;
+    float: right;
+    position: relative;
+    padding-right: 20px;
 }
